// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LineItemRow/> should render 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <small
          class="d-block text-muted"
        >
          <del>
            <span>
              $1.00
            </span>
          </del>
        </small>
        <span>
          $0.00
        </span>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <div
      class="input-group"
    >
      <span
        class="quantityContainer"
      >
        <input
          class="quantityInput form-control"
          pattern="\\\\d+"
          type="text"
          value="1"
        />
        <span
          class="quantityMax"
        >
          / 
          1
        </span>
      </span>
      <div
        class="quantityButtonsContainer input-group-append"
      >
        <button
          class="wrapper focusable quantityBtn quantityBtnUp secondary medium isDisabled"
          disabled=""
          tabindex="0"
        >
          ▲
        </button>
        <button
          class="wrapper focusable quantityBtn quantityBtnDown secondary medium"
          tabindex="0"
        >
          ▼
        </button>
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto ml-auto"
      >
        <span>
          $0.00
        </span>
      </strong>
    </div>
  </td>
</tr>
`;

exports[`<LineItemRow/> should render for multi-currency order 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <span>
          $1.00
        </span>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <div
      class="input-group"
    >
      <span
        class="quantityContainer"
      >
        <input
          class="quantityInput form-control"
          pattern="\\\\d+"
          type="text"
          value="1"
        />
        <span
          class="quantityMax"
        >
          / 
          1
        </span>
      </span>
      <div
        class="quantityButtonsContainer input-group-append"
      >
        <button
          class="wrapper focusable quantityBtn quantityBtnUp secondary medium isDisabled"
          disabled=""
          tabindex="0"
        >
          ▲
        </button>
        <button
          class="wrapper focusable quantityBtn quantityBtnDown secondary medium"
          tabindex="0"
        >
          ▼
        </button>
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto ml-auto"
      >
        <span>
          ¥100
        </span>
      </strong>
    </div>
  </td>
</tr>
`;

exports[`<LineItemRow/> should render with discounted price 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <small
          class="d-block text-muted"
        >
          <del>
            <span>
              $1.00
            </span>
          </del>
        </small>
        <span>
          $0.50
        </span>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <div
      class="input-group"
    >
      <span
        class="quantityContainer"
      >
        <input
          class="quantityInput form-control"
          pattern="\\\\d+"
          type="text"
          value="1"
        />
        <span
          class="quantityMax"
        >
          / 
          1
        </span>
      </span>
      <div
        class="quantityButtonsContainer input-group-append"
      >
        <button
          class="wrapper focusable quantityBtn quantityBtnUp secondary medium isDisabled"
          disabled=""
          tabindex="0"
        >
          ▲
        </button>
        <button
          class="wrapper focusable quantityBtn quantityBtnDown secondary medium"
          tabindex="0"
        >
          ▼
        </button>
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto ml-auto"
      >
        <span>
          $0.50
        </span>
      </strong>
    </div>
  </td>
</tr>
`;

exports[`<LineItemRow/> should render without quantity and without price 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://storegorgias3.myshopify.com/admin/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="text-center text-muted"
    colspan="2"
  >
    <small>
      Already returned
    </small>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto ml-auto"
      >
        <span>
          $0.00
        </span>
      </strong>
    </div>
  </td>
</tr>
`;
